# Micropp

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  RUN1.sh
doc/: Makefile  governing_equations_and_fe.tex  makefile  manual.tex
doc/Sections/: benchmarks.tex  coding_style.tex  compilation.tex
doc/coupling/: README.md
doc/figures/: work_basis.tikz
doc/performance/: acc-cuda.tex  cpu-acc-cuda.tex
inc/: csr.h  csr.hpp  ell.h  ell_2d.h  micro.h  micro.hpp
include/: c_wrapper.h  common.hpp  cuda.hpp  ell.hpp  gp.hpp  instrument.hpp  material.hpp  material_acc.hpp  material_base.h  micro.hpp  micropp.hpp  micropp_c.h  micropp_c_wrapper.h  newton.hpp  params.hpp  types.hpp  util.hpp
pics/: acc-cuda.tex  cpu-acc-cuda.tex
scripts/: cg_perf.sh  clean.sh  compile_opt.sh  convergence.sh  cpu-gpu.sh  extrac_cg_perf.sh  extrac_performance.sh  extract_data.py  format_all.sh  interactive.sh  job_mn.sh  job_mt.sh  micropp-stats.sh  performance.sh  plot_assembly_solver.plt  plot_omp.sh  plot_output.sh  porcentages.sh  power9.sh  run-multi-gpu-mpi.sh  run_gpu.sh  run_p9.sh  speedup-multi-gpus.sh  speedup_gpu_cpu.sh  test-omp.sh  test3d_1_conv.sh  test_omp.job  valgrind  vars.sh
scripts/hybrid-mpi-omp/: clean.sh  extrae.xml  job_mn.sh
scripts/power9-debug/: clean.sh  run.sh
scripts/power9-multi-node/: run.sh
src/: assembly.cpp  assembly.cu  assembly_acc.cpp  average.cpp  c_wrapper.cpp  common.cpp  csr.cpp  ell-common.cpp  ell.c  ell.cpp  ell.cu  ell_2d.cpp  ell_acc.cpp  fortran_wrapper.cpp  homogenize.cpp  homogenize_acc.cpp  instrument.cpp  loc_hom.cpp  main.cpp  material.c  material.cpp  material.f95  material_acc.cpp  mesh.cpp  micro.cpp  micro.f95  micro.smod  micro2D.cpp  micro3D.cpp  micro3D_exclusive.cpp  micro_common.cpp  micropp.cpp  micropp.f95  micropp_c.cpp  output.cpp  solve.cpp  solve_acc.cpp  test_1.cpp  update.cpp  wrapper.cpp  (+1 more)
src/cuda/: assembly.cu  ell.cu  init.cu
src/openacc/: assembly.cpp  ell.cpp
test/: CMakeLists.txt  Makefile  README.md  benchmark-cpu-gpu.cpp  benchmark-damage.cpp  benchmark-elastic.cpp  benchmark-mic-1.cpp  benchmark-mic-2.cpp  benchmark-mic-3.cpp  benchmark-mic-4.cpp  benchmark-plastic.cpp  benchmark-sc2019.cpp  benchmark-sol-ass.cpp  conv3d_2lay.cpp  ell_solvers.cpp  hybrid-mpi-omp.cpp  mpi-load-balance.cpp  multi-gpu-mpi  multi-gpu-mpi.cpp  test2d_1.cpp  test3d_1.cpp  test3d_2.cpp  test3d_3.f90  test3d_4.cpp  test3d_5.cpp  test3d_6.c  test3d_7.cpp  test3d_8.cpp  test3d_mictype3.cpp  test3d_perf_1.cpp  test_1.cpp  test_2.cpp  test_3.f90  test_4.cpp  test_5.cpp  test_6.cpp  test_7.cpp  test_8.cpp  test_A0.cpp  test_MIC3D_8.cpp  (+22 more)
